# trade_arena

./: .gitignore  Anchor.toml  CONTEXT.md  Dockerfile  README.md  brand.md  claude-session.jsonl  codex-session.jsonl  package.json  railway.json
.playwright-mcp/: page-2026-04-29T14-17-25-883Z.yml  page-2026-04-30T07-24-22-598Z.yml  page-2026-04-30T07-24-41-517Z.yml  page-2026-04-30T07-24-48-799Z.yml  page-2026-04-30T07-35-34-921Z.yml  page-2026-04-30T07-35-42-767Z.yml  page-2026-04-30T07-40-19-804Z.yml  page-2026-04-30T07-45-41-117Z.yml  page-2026-04-30T07-49-46-539Z.yml  page-2026-04-30T07-54-26-787Z.yml  page-2026-04-30T07-56-51-919Z.yml
.superstack/: idea-context.md  validation-report.html
.superstack/idea-validations/: x402-wallet-broker.html  x402-wallet-broker.json
app/: .gitignore  README.md  index.html  package.json  railway.json  tsconfig.app.json  vite.config.ts
app/public/: live-arena.json
app/src/: App.tsx  index.css  main.tsx  router.tsx
docs/: agentic-engineering-grant-application.md
docs/plans/: 2026-04-19-app-ui-design.md  (+5 more)
programs/trade_arena/: Cargo.toml
programs/trade_arena/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/trade_arena/src/instructions/: claim_prize.rs  close_position.rs  commit_game.rs  commit_player.rs  create_game.rs  delegate_game.rs  delegate_player.rs  end_game.rs  join_game.rs  open_position.rs  start_game.rs  trade_position.rs
prototypes/: dark-ui-options.html
scripts/: launch-game.ts  run-mcp-agent-game.ts
tests/: simulate_real_game.ts  trade_arena.ts
(+56 files in other folders)
