[package]
name = "trade_arena"
version = "0.1.0"
description = "Trading competition on MagicBlock ephemeral rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trade_arena"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "session-keys/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Relaxes duration and commit-window constraints so tests don't need to wait minutes
testing = []

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.32.1", features = ["token"] }
ephemeral-rollups-sdk = { version = "=0.6.5", features = ["anchor", "disable-realloc"] }
session-keys = { version = "=3.0.11", features = ["no-entrypoint"] }

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
